[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/0.png" type="Texture" id=1]
[ext_resource path="res://Gallery.gd" type="Script" id=2]
[ext_resource path="res://Resources/PreviousArrow.png" type="Texture" id=3]
[ext_resource path="res://Resources/NextArrow.png" type="Texture" id=4]
[ext_resource path="res://Resources/Comic_Sans.tres" type="DynamicFont" id=5]

[node name="Gallery" type="Node2D"]
script = ExtResource( 2 )

[node name="Card_sprite" type="Sprite" parent="."]
position = Vector2( 297.36, 342.256 )
texture = ExtResource( 1 )

[node name="Card_number" type="RichTextLabel" parent="Card_sprite"]
margin_left = -20.049
margin_top = 299.723
margin_right = 18.951
margin_bottom = 321.723
rect_scale = Vector2( 2, 2 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous_button" type="Button" parent="Card_sprite"]
margin_left = 342.096
margin_top = 56.1414
margin_right = 866.096
margin_bottom = 574.141
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next_button" type="Button" parent="Card_sprite"]
margin_left = 337.958
margin_top = -127.24
margin_right = 861.958
margin_bottom = 390.76
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 613.566
margin_top = 49.3245
margin_right = 802.566
margin_bottom = 132.324
custom_fonts/font = ExtResource( 5 )
text = "TORNA ALLA LOBBY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Card_sprite/Previous_button" to="." method="_on_Previous_button_pressed"]
[connection signal="pressed" from="Card_sprite/Next_button" to="." method="_on_Next_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
